--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,6 +14,9 @@
 <!-- Add your Google Font here -->
 <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
 
+<link rel="stylesheet" href="{{ base_path }}/assets/css/main.css">
+
+
 <script>
   document.documentElement.className = document.documentElement.className.replace(/\bno-js\b/g, '') + ' js ';
 </script>
