--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -10,12 +10,14 @@
 
 
 body {
-  font-family: 'Inter', sans-serif;
+  font-family: 'Inter', sans-serif !important;
 }
 
-h1, h2, h3, h4, h5 {
-  font-family: 'Inter', sans-serif;
+
+.page-content {
+  font-family: 'Inter', sans-serif !important;
 }
+
 
 
 @import
