--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,7 +14,8 @@
 <!-- Add your Google Font here -->
 <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
 
-<link rel="stylesheet" href="{{ base_path }}/assets/css/main.css">
+<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
+
 
 
 <script>
@@ -22,6 +23,6 @@
 </script>
 
 <!-- For all browsers -->
-<link rel="stylesheet" href="{{ base_path }}/assets/css/main.css">
+<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
 
 <meta http-equiv="cleartype" content="on">
